# PSES_Adaptive_State_Management

./: .gitignore  AUTHORS.md  CMakeLists.txt  README.md
.github/: index.html
.github/workflows/: ci.yaml  cppcheck.yaml  prepare-env.yaml
apps/: CMakeLists.txt
ara/dia/: ecu_reset_request.hpp
ara/phm/: recovery_action.cpp  recovery_action.hpp
cmake_modules/: CodeCoverage.cmake
include/CommunicationGroupServer/: CommunicationGroupServer.h
include/StateManagement/: StateManagement.hpp
include/UpdateRequest/: UpdateRequest.h
src/: CMakeLists.txt  CommunicationGroupServer.cpp  CommunicationGroupServer.h  CommunicationGroupServer.hpp  EcuResetRequest.hpp  ExecutionClient.cpp  ExecutionClient.hpp  RecoveryAction.hpp  StateClient.cpp  StateClient.hpp  StateManagement.cpp  StateManagement.hpp  StateManagementTypes.hpp  TriggerIn.cpp  TriggerIn.h  TriggerIn.hpp  TriggerInOut.cpp  TriggerInOut.h  TriggerInOut.hpp  TriggerOut.cpp  TriggerOut.h  TriggerOut.hpp  UpdateRequest.cpp  UpdateRequest.h  UpdateRequest.hpp  debug.cpp  debug.hpp
src/Trigger/: TriggerIn.cpp  TriggerInOut.cpp  TriggerOut.cpp
src/UpdateRequest/: UpdateRequest.cpp
tests/: CMakeLists.txt  CommunicationGroupServerTest.h  CommunicationGroupServerTest.hpp  ExampleTestOfNothing.cpp  StateManagementTest.cpp  StateManagementTest.hpp  TestOfCommunicationGroupServer.cpp  TestOfEcuResetRequest.cpp  TestOfExecutionClient.cpp  TestOfNothing.cpp  TestOfPowerMode.cpp  TestOfRecoveryAction.cpp  TestOfStateClient.cpp  TestOfTriggerIn.cpp  TestOfTriggerInOut.cpp  TestOfTriggerOut.cpp  TestOfUpdateRequest.cpp  TriggerInTest.h  sm_test_main.cpp  sm_test_main.hpp  test_of_debug.cpp  test_of_debug2.cpp
